Simple Menu Developed

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="nav-main">
             <div class="menu-logotipo">
-                <img src="./images/logoPabloBlanco.svg" alt="">
+                <a href="https://www.instagram.com/pablomartin2206/" target="_blank">
+                    <img src="./images/logoPabloBlanco.svg" alt="">
+                </a>
             </div>
             <div class="menu-items">
                 <ul>
@@ -23,7 +25,7 @@
         </nav>
     </header>
     <main>
-        <section class="main-section-home">
+        <section class="main-section-home" id="main-section">
             <h1>
                 Recetas de Cocina
             </h1>
@@ -31,5 +33,6 @@
         </section>
 
     </main>
+    <script src="./js/script.js"></script>
 </body>
 </html>
