Minor Changes in index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         </section>
 
     </main>
+    <footer>
+        
+    </footer>
     <script src="./js/script.js"></script>
 </body>
 </html>
