Seccion Inicio finalizada. Hay un título y dos cajas básicas con links a las secciones 'Recetas' y 'Contacto'

--- a/index.html
+++ b/index.html
@@ -24,17 +24,11 @@
             </div>
         </nav>
     </header>
-    <main>
-        <section class="main-section-home" id="main-section">
-            <h1>
-                Recetas de Cocina
-            </h1>
-            <h3>Pablo Bejas</h3>
-        </section>
+    <main id="main-section">
 
     </main>
     <footer>
-        
+
     </footer>
     <script src="./js/script.js"></script>
 </body>
