Changed class names to meet BEM methodology

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <header>
-        <nav class="nav-main">
-            <div class="menu-logotipo">
+        <nav class="header__nav">
+            <div class="header__nav__logotipo">
                 <a href="https://www.instagram.com/pablomartin2206/" target="_blank">
                     <img src="./images/logoPabloBlanco.svg" alt="">
                 </a>
             </div>
-            <div class="menu-items">
+            <div class="header__nav__items">
                 <ul>
                     <li onclick="handleClickMenu('inicio')">Inicio</li>
                     <li onclick="handleClickMenu('recetas')">Recetas</li>
